--- a/src/app/index.css
+++ b/src/app/index.css
@@ -64,26 +64,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* Custom Scrollbar */
+/* Hide Scrollbar */
 * {
-  scrollbar-width: thin;
-  scrollbar-color: #334155 transparent; /* slate-700 */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
 }
 
 *::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-
-*::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: #334155; /* slate-700 */
-  border-radius: 10px;
-}
-
-*::-webkit-scrollbar-thumb:hover {
-  background-color: #475569; /* slate-600 */
+  display: none; /* Chrome, Safari and Opera */
 }
