--- a/src/app/index.css
+++ b/src/app/index.css
@@ -25,6 +25,23 @@
   }
 }
 
+@keyframes marquee {
+  0%,
+  10% {
+    transform: translateX(0);
+  }
+
+  45%,
+  55% {
+    transform: translateX(var(--scroll-x));
+  }
+
+  90%,
+  100% {
+    transform: translateX(0);
+  }
+}
+
 @keyframes float {
   0%,
   100% {
